# BeaconCalculator

./: Cargo.toml  README.md
RustVersion/: Cargo.toml
RustVersion/src/: lib.rs  main.rs
examples/: panes_red_green.rs  pinkish_red.rs
src/: color_utils.rs  lib.rs
