[package]
name = "beacon-calculator"
version = "1.1.0"
edition = "2021"
description = "A library for calculating the glass colors needed to color a Minecraft beacon"
repository = "https://github.com/Toll25/BeaconCalculator"
license-file = "LICENSE"
keywords = ["minecraft", "beacon", "color", "rgb"]

[dependencies]
deltae = "0.3.2"
lab = "0.11.0"
serde = { version = "1.0.216", features = ["derive"], optional = true }

[[example]]
name = "pinkish_red"

[[example]]
name = "panes_red_green"

[features]
serde = ["dep:serde"]
