[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
lab = "0.11.0"
deltae = "0.3.2"
crossbeam = "0.8.4"
ndarray = "0.16.1"
indicatif = "0.17.8"
fastrand = "2.1.1"
